<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pallet_light"
    android:backgroundTint="@color/pallet_light"
    android:paddingHorizontal="22dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your_caps"
        android:textColor="@color/pallet_darkest"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age_caps"
        android:textColor="@color/pallet_light"
        android:background="@color/pallet_darkest"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes_caps"
        android:textColor="@color/pallet_darkest"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/select_date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pallet_medium"
        android:textColor="@color/pallet_lightest"
        android:text="@string/select_date_caps"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/selected_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/pallet_darkest"
        android:textSize= "20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selected_date"
        android:textColor="@color/pallet_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/in_minutes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/pallet_darkest"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/in_minutes"
        android:textColor="@color/pallet_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        />

</androidx.appcompat.widget.LinearLayoutCompat>